--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ data/Transaction/BalanceChanges.txt
 data/Transaction/BalanceTransfers.txt
 data/Transaction/UserAccounts.txt
 data/temp.txt
+data/Transaction/BalanceChanges.txt
+data/BankAccount/BankAccounts.txt
+data/temp.txt
+data/Transaction/BalanceChanges.txt
